tests/errors/interpreter/for_range_invalid.ny
uWu_nyaa() => {
    for _ => (3.3, "3") {
        pasu
    }
}